--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.container {
+    margin: 0 auto;
+    max-width: 1140px;
+}
+
+.title {
+    text-align: center;
+    padding: 30px;
+    background-color: #666;
+    color: white;
+    margin-bottom: 50px;
+}
